--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Portfolio</title>
+  <title>Emmanuel Simiyu</title>
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
   <link rel="stylesheet" href="style.css">
@@ -30,8 +30,10 @@
     <div class="text">
       <p>Hello, I am</p>
       <h1 data-aos="slide-right">Emmanuel Simiyu</h1>
-      <p>And I am <span id="ani">Front End Developer</span></p>
-      <button class="cBtn">Hire me</button>
+      <p>And I am a <span id="ani"> Software Engineer</span></p>
+      <!--<button class="cBtn">Hire me</button>--> 
+      <button class="cBtn" onclick="location.href='mailto:simiemmanuel2019@gmail.com';">Hire me</button>
+
     </div>
   </header>
 
@@ -48,9 +50,9 @@
       </div>
 
       <div class="aboutText" data-aos="slide-left">
-        <p class="about-title">Hello, I am Emmanuel Simiyu<br> I am a Web designer & Developer</p>
-        <p class="aboutDisc">A young Developer with alot of enthusiasm in programming.My skills are based on web designing, web developing, user interface(UI) and user experience(UX).
-          <br>I also develop UI and UX for android appications.
+        <p class="about-title">Hello, I am Emmanuel Simiyu<br>A software engineer and a full stack web developer</p>
+        <p class="aboutDisc"> Years of experience in my profession with different languages and softwares I am a highly motivated software developer 
+          <br>I can take care of your application and website with ease and help accelerate your services and uplift your brand.
 
         </p>
         <button class="cBtn">Download CV</button>
@@ -68,37 +70,51 @@
     <div class="skillRow" data-aos="fade-up">
 
       <div class="skillText">
-        <p>My first languages to learn was web based languages which include HTML, CSS and JavaScript.
-        I am familiar with HTML and CSS for one year and Javascript for.....  </i></b></p>
+        <p>My journey started with simple HTML/CSS, then afer some time I decided to dive into Javascript, PHP and Python for both web and mobile applications.....  </i></b></p>
         <button class="cBtn">Read more</button>
       </div>
 
       <div class="skillProgress">
 
         <div class="ProgressBox">
-          <p>HTML</p>
+          <p>PHP</p>
           <progress value="95" max="100"></progress>
           <span style="color: #fff;">95%</span>
         </div>
         <div class="ProgressBox">
-          <p>CSS</p>
+          <p>Laravel</p>
+          <progress value="80" max="100"></progress>
+          <span style="color:#fff;">80%</span>
+        </div>
+        <div class="ProgressBox">
+          <p>Python</p>
           <progress value="85" max="100"></progress>
           <span style="color: #fff;">85%</span>
         </div>
         <div class="ProgressBox">
           <p>JAVASCRIPT</p>
-          <progress value="50" max="100"></progress>
-          <span style="color: #fff;">50%</span>
+          <progress value="88" max="100"></progress>
+          <span style="color: #fff;">88%</span>
         </div>
         <div class="ProgressBox">
-          <p>JQUERY</p>
+          <p>React</p>
           <progress value="55" max="100"></progress>
           <span style="color: #fff;">55%</span>
         </div>
         <div class="ProgressBox">
           <p>BOOTSTRAP</p>
-          <progress value="60" max="100"></progress>
-          <span style="color:#fff;">60%</span>
+          <progress value="90" max="100"></progress>
+          <span style="color:#fff;">90%</span>
+        </div>
+        <div class="ProgressBox">
+          <p>HTML</p>
+          <progress value="100" max="100"></progress>
+          <span style="color:#fff;">100%</span>
+        </div>
+        <div class="ProgressBox">
+          <p>CSS</p>
+          <progress value="99" max="100"></progress>
+          <span style="color:#fff;">99%</span>
         </div>
       </div>
     </div>
@@ -114,23 +130,24 @@
     <div class="serviceRow" data-aos="flip-up">
       <div class="serviceBox">
         <img src="images/b2.png" alt="">
-        <h2>Web Designer</h2>
-        <p>Whith an aid of different illustrators and editors I am good at designing and putting the idea into an actual structure/image</p>
+        <h2>Full stack Developer</h2>
+        <p> A software engineer With experience in PHP SQl different databases Python and APIs. Ready to bring your web application idea to life </p>
 
 
       </div>
 
       <div class="serviceBox">
         <img src="images/b2.png" alt="">
-        <h2>Web Developer</h2>
-        <p>After the structure/image is lay down the real construction starts where I use the required language to actually develop the web</p>
+        <h2>Front End Developer</h2>
+        <p>Do you need a portfolio, a landing page or just a responsive website 
+        to showcase your work to the world. I got you covered </p>
 
       </div>
 
       <div class="serviceBox">
         <img src="images/b2.png" alt="">
-        <h2>App Developer</h2>
-        <p>I an capable of designing developing the user interface and user experience in android applications.</p>
+        <h2>UI/UX</h2>
+        <p>UI I aim to create interfaces which users find easy to use and pleasurable. And UX, how a user feels while interacting with a product, system or service is very important.</p>
       </div>
 
     </div>
@@ -161,7 +178,7 @@
           <button> type="submit" value="SUBMIT" <a href="mailto:curiouswrld1@gmail.com"></button> -->
 
 
-            <form method="post" action="mailto:curiouswrld1@gmail.com" >
+            <form method="post" action="mailto:simiemmanuel2019@gmail.com" >
             <input type="submit" value="Send Email" /> 
             </form>
 
@@ -172,7 +189,7 @@
 
   <section id="footer">
     <div class="footerDev">
-      <p>Development By</p>
+      <p>Developed By</p>
       <h1>Emmanuel Simiyu</h1>
     </div>
     <div class="footerIcon">
