conecting submit with formsubmit.co

--- a/index.html
+++ b/index.html
@@ -168,19 +168,19 @@
       </div>
 
       <div class="contactForm" data-aos="slide-left">
-        <form action="">
+        <form action="https://formsubmit.co/simiemmanuel2019@gmail.com" method="POST">
           <h1>Contact with me </h1>
-          <input type="text" name="name" placeholder="Name"><br>
-          <input type="email" name="email" placeholder="Email"><br>
+          <input type="text" name="name" placeholder="Name" required><br>
+          <input type="email" name="email" placeholder="Email" required><br>
           <textarea name="message" id="" cols="30" rows="5" placeholder="Message"></textarea><br>
           <!-- <button type="submit">Submit</button> 
             
-          <button> type="submit" value="SUBMIT" <a href="mailto:curiouswrld1@gmail.com"></button> -->
+          <button> type="submit" value="SUBMIT" <a href="mailto:curiouswrld1@gmail.com"></button> 
 
 
-            <form method="post" action="mailto:simiemmanuel2019@gmail.com" >
+            <form method="post" action="mailto:simiemmanuel2019@gmail.com" >-->
             <input type="submit" value="Send Email" /> 
-            </form>
+           <!-- </form> -->
 
         </form>
       </div>
