added a download button

--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
           <br>I can take care of your application and website with ease and help accelerate your services and uplift your brand.
 
         </p>
-        <button class="cBtn">Download CV</button>
-      </div>
+        
+        <!--<button class="cBtn">Download CV</button>-->
+        <button class="cBtn"></button> <a href="https://drive.usercontent.google.com/u/0/uc?id=1-ytHlJ38X9mMIkssZ8zZKPQX9GUQtjfw&export=download">Download CV</a>
+      </div> </button>
 
     </div>
   </section>
