drive link instead of download link

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </p>
         <!--the link bellow allows users to download a file from my google drive-->
 
-        <a href="https://drive.usercontent.google.com/u/0/uc?id=10g2KaeXcMJ2pGMuyUB7XGQ_gK4ke18NC&export=download">
+        <a href="https://drive.google.com/file/d/10g2KaeXcMJ2pGMuyUB7XGQ_gK4ke18NC/view?usp=drivesdk">
           <button class="cBtn">Download CV</button>
            </a>
 
